resolve_node_prizes added

--- a/config/setting_1-rsqd.ini
+++ b/config/setting_1-rsqd.ini
@@ -2,7 +2,7 @@
 version = 0.1.1
 fold = 1-1
 prize_mode = positive
-cost_mode = weight
+cost_mode = 1-weightsqd
 retain_intermediate = False
 
 [msgsteiner]
