--- a/.gitignore
+++ b/.gitignore
@@ -6,10 +6,14 @@ __pycache__/
 # C extensions
 *.so
 
+# shell scripts
+*.sh
+
 # extra dirs
 experiments/"
 experiments/*
 tests/
+intermediate_files/
 
 # extra files"
 *.jpg
